# llamaShield

./: .gitignore  .gitmodules  README.md  test_bindings.py
cpp-engine/: CMakeLists.txt  test_module.py
cpp-engine/bindings/: python_bindings.cpp
cpp-engine/include/: BinaryFuseWrapper.hpp  MortonFilterWrapper.hpp  coherent_memory_manager.hpp  numa_optimized_filter.hpp  performance_optimized_filter.hpp
cpp-engine/src/: BinaryFuseWrapper.cpp  MortonFilterWrapper.cpp  main.cpp  numa_optimized_filter.cpp  test_binaryfuseapi.cpp
python/: llamashield_py.pyd  llm_orchestrator.py  requirements.txt  test_api.py  test_integration.py  test_simple.py  test_web_import.py  web_service.py
